# kpmp-check

./: .gitignore  Cargo.toml  config.toml  init.sql
1/: config.toml
datastaticface/: config.toml
datastaticperson/: config.toml
diesel_demo/: Cargo.toml
kdface/: config.toml
kdstaticface/: config.toml
src/: config.rs  consumer.rs  main.rs
src/db/: mapper.rs  mod.rs
src/entity/: aias_kdface.rs  face.rs  image.rs  kedaface.rs  kpmp_face.rs  mod.rs  static_face.rs
static move/: config.toml
staticface/: config.toml
viaskdface/: config.toml
